test/regress/regress-28.txt
;;; TOOL: run-gen-wasm-interp
;;; ERROR: 1
magic
version
section(TYPE) { count[1] function params[0] results[0] }
section(FUNCTION) { count[1] type[0] }
section(CODE) {
  count[1]
  func {
    locals[0]
    unreachable
    end
    i32.div_s
    select
  }
}
(;; STDERR ;;;
out/test/regress/regress-28/regress-28.wasm:000001b: error: type mismatch in function, expected [] but got [any]
000001c: error: EndFunctionBody callback failed
;;; STDERR ;;)
